# ytaudiobar

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_manager.rs  database.rs  download_manager.rs  main.rs  media_key_manager.rs  models.rs  queue_manager.rs  ytdlp_installer.rs  ytdlp_manager.rs
src/app/: global.css
src/app/routes/: home.tsx
src/components/: app-header.tsx  scrolling-text.tsx  tab-header.tsx  track-item.tsx
src/features/downloads/: downloads-tab.tsx
src/features/player/: expanded-player.tsx  mini-player.tsx
src/features/playlists/: playlist-selection-modal.tsx  playlists-tab.tsx
src/features/queue/: queue-tab.tsx
src/features/search/: search-tab.tsx
src/features/settings/: settings-tab.tsx
src/lib/: tauri.ts
src/stores/: player-store.ts
