[package]
name = "ytaudiobar"
version = "1.0.0"
description = "YouTube Audio Player for Windows and Linux"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
