[package]
name = "ytaudiobar-tauri-react"
version = "1.0.0"
description = "YouTube Audio Player for Windows and Linux"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
rand = "0.8"
once_cell = "1.20"
tauri-plugin-shell = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
souvlaki = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
